# parikshanam

./: .gitignore  .prettierignore  CLAUDE.md  CONVERSATION_SUMMARY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  test-query.js  turbo.json
apps/admin/: .env.local.example  middleware.ts  package-lock.json  package.json  test-query.mjs  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/api/: README.md  package.json  pyproject.toml
apps/api/app/: main.py
apps/mobile/: .env.example  .gitignore  BUILD_FIXES_COMPLETE.md  COMPONENT_EXAMPLES.md  DESIGN.md  DESIGN_IMPLEMENTATION.md  FIXES_APPLIED.md  QUICK_START.md  README.md  VIDEO_PLAYER_FIX.md  app.json  global.css  metro.config.js  package.json  rzp-key.csv  tailwind.config.js
apps/teacher/: middleware.ts  package.json  tsconfig.tsbuildinfo
apps/web/: instrumentation-client.ts  next.config.ts  package-lock.json  package.json  test-curl-edge.mjs  test-edge-func.mjs
docs/: DESIGN.md  GOOGLE_OAUTH_SETUP.md
patches/: expo-av+16.0.8.patch
scripts/: postinstall.js
supabase/: README.md  config.toml
supabase/migrations/: 20250322000000_init_parikshanam.sql  20250322000001_seed_course.sql  20250322000002_polish.sql  20250322000003_class_olympiad_catalog.sql  20250325000004_lessons_video.sql  20260325000005_admin_teacher_roles.sql  20260327000006_auto_sync_course_lesson_stats.sql  20260327000007_course_thumbnails_bucket.sql  20260327000008_lesson_thumbnail.sql  20260402000009_profiles_school.sql  20260402000009_schools.sql  20260402000010_drop_school_id.sql  20260402000010_schools_lookup.sql  (+2 more)
(+285 files in other folders)
